adding methodology page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,7 @@
   link: /
   new_window: true
   highlight: false
+- name: Methodology
+  link: /methodology
+  new_window: true
+  highlight: false
