--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,14 @@
   link: /about/
   new_window: false
   highlight: false
+- name: Onsite
+  link: /onsite
+  new_window: false
+  highlight: false
+- name: Offsite
+  link: /onffsite
+  new_window: false
+  highlight: false
 - name: Contact
   link: /contact/
   new_window: false
@@ -10,7 +18,4 @@
   link: /
   new_window: true
   highlight: false
-- name: Methodology
-  link: /methodology
-  new_window: true
-  highlight: false
+
