fixed navigation error and adding spacing

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
   new_window: false
   highlight: false
 - name: Offsite
-  link: /onffsite
+  link: /offsite
   new_window: false
   highlight: false
 - name: Contact
